# trip

./: .firebaserc  .gitignore  Dockerfile  Makefile  README.md  dev.Dockerfile  firebase.json  firestore.indexes.json
.github/: frontend-deploy.yaml
.github/workflows/: buiild-func.yml  build-web.yml  pr-check.yml
_backend/: .env  index.ts  makeFakeDate.ts  package-lock.json  package.json  tsconfig.json
_backend/@types/: index.ts  trip.ts
_backend/apis/: trip.ts  utils.ts
_backend/auth/: index.ts
_backend/functions/: index.js
backend/: .firebaserc  README.md  final_output.json  firebase.json  package.json
backend/env/: Dockerfile  docker-compose.yml  ecosystem.config.js  var.env
backend/functions/: index.js
crawler/: crawler.py  crawler_thma.py  final_output.csv  pyproject.toml  test.html  test_404.html
frontend/: README.md  pubspec.yaml
frontend/assets/: gpx.txt
frontend/lib/: consts.dart  firebase_options.dart  main.dart  middleware.dart
frontend/linux/: CMakeLists.txt  my_application.cc
frontend/test/: model_test.dart  widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
functions/: .eslintrc.js  .gitignore  api_doc.apib  index.ts  makeFakeData.ts  makeFakeDate.ts  notify.ts  package-lock.json  package.json  tsconfig.json
functions/@types/: index.ts  register.ts  trip.ts  user.ts
functions/apis/: index.ts  mail.ts  register.ts  trip.ts  user.ts  utils.ts
functions/auth/: index.ts
functions/data/: all_data.json  test_trips.json
functions/docs/: wa-project-api.apib
(+105 files in other folders)
