[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["WeiChen Lin <asdfg09487@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"
Faker = "^18.3.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
